# multi-project

./: WORKSPACE
hello/: BUILD.bazel  main_test.go
